--- a/ETrainerWEB/appsettings.json
+++ b/ETrainerWEB/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=127.0.0.1;Port=3306;Database=etrainerdb;Uid=root;Pwd=P@ssw0rd;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
