--- a/ETrainerWEB/appsettings.json
+++ b/ETrainerWEB/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=etrainerdb;Uid=root;Pwd=P@ssw0rd;"
+    "Default": "Server=127.0.0.1;Port=3306;Database=etrainerdb;Uid=root;Pwd=root;"
   },
   "Logging": {
     "LogLevel": {
