--- a/ETrainerWEB/ETrainerWEB.csproj
+++ b/ETrainerWEB/ETrainerWEB.csproj
@@ -28,6 +28,7 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Migrations" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
